admin.yml
apiVersion: v1
kind: Service
metadata:
  name: admin
  annotations:
    service.beta.kubernetes.io/ncloud-load-balancer-layer-type: "nplb"
    service.beta.kubernetes.io/ncloud-load-balancer-internal: "true"
    service.beta.kubernetes.io/ncloud-load-balancer-size: "SMALL"
    service.beta.kubernetes.io/ncloud-load-balancer-ssl-certificate-no: "10643"
spec:
  type: NodePort
  selector:
    app: admin
  ports:
    - port: 80
      targetPort: 5555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 40
          image: image.registry.url.com/admin:2.0.7
          imagePullPolicy: Always
          ports:
            - containerPort: 5555
          readinessProbe:
            httpGet:
              path: /health/check
              port: 5555
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
      imagePullSecrets:
        - name: regcred # secret.sh
      terminationGracePeriodSeconds: 300
