auth.yml
apiVersion: v1
kind: Service
metadata:
  name: auth
  annotations:
    service.beta.kubernetes.io/ncloud-load-balancer-layer-type: "nplb"
    service.beta.kubernetes.io/ncloud-load-balancer-internal: "true"
    service.beta.kubernetes.io/ncloud-load-balancer-size: "SMALL"
    service.beta.kubernetes.io/ncloud-load-balancer-ssl-certificate-no: "10643"
spec:
  type: NodePort
  selector:
    app: auth
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 40
          image: image.registry.url.com/auth:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/check
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
      imagePullSecrets:
        - name: regcred
      terminationGracePeriodSeconds: 300
