nest.yml
apiVersion: v1
kind: Service
metadata:
  name: nest
spec:
  type: NodePort
  selector:
    app: nest
  ports:
    - port: 80
      targetPort: 8000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nest
  template:
    metadata:
      labels:
        app: nest
    spec:
      containers:
        - name: nest
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 40
          image: image.registry.url.com/nest:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health/check
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
      imagePullSecrets:
        - name: regcred
      terminationGracePeriodSeconds: 300
