nest2.yml
apiVersion: v1
kind: Service
metadata:
  name: nest2
spec:
  type: NodePort
  selector:
    app: nest2
  ports:
    - port: 80
      targetPort: 8002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nest2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nest2
  template:
    metadata:
      labels:
        app: nest2
    spec:
      containers:
        - name: nest2
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 40
          image: image.registry.url.com/nest2:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8002
          readinessProbe:
            httpGet:
              path: /health/check
              port: 8002
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
      imagePullSecrets:
        - name: regcred
      terminationGracePeriodSeconds: 300
