scheduler.yml
apiVersion: v1
kind: Service
metadata:
  name: scheduler
spec:
  type: NodePort
  selector:
    app: scheduler
  ports:
    - port: 80
      targetPort: 3333
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
        - name: scheduler
          lifecycle:
              preStop:
                exec:
                  command:
                  - /bin/sh
                  - -c
                  - sleep 40
          image: image.registry.url.com/scheduler:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 3333
      imagePullSecrets:
        - name: regcred
      terminationGracePeriodSeconds: 300
