socket.yml
apiVersion: v1
kind: Service
metadata:
  name: socket
spec:
  type: NodePort
  selector:
    app: socket
  ports:
    - port: 80
      targetPort: 8001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket
spec:
  replicas: 1
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
        - name: socket
          lifecycle:
            preStop:
              exec:
                command:
                - /bin/sh
                - -c
                - sleep 40
          image: image.registry.url.com/socket:2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /health/check
              port: 8001
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
      imagePullSecrets:
        - name: regcred
      terminationGracePeriodSeconds: 300
