ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: router
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/websocket-services: "socket"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/limit-rps: "30"
  labels:
    app: router
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: socket
                port:
                  number: 80
          - path: /auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /nest/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nest
                port:
                  number: 80
          - path: /nest2/?(.*)
            pathType: Prefix
            backend:
              service:
                name: nest2
                port:
                  number: 80
          - path: /admin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: admin
                port:
                  number: 80
          - path: /open/hellofin/?(.*)
            pathType: Prefix
            backend:
              service:
                name: hellofin
                port:
                  number: 80
